Bug 1642223 - Fix behavior of AdjustNormalSelection when moving back into the maintained range from before it, to avoid collapsing to the end of the range. r=mbrodesser

Differential Revision: https://phabricator.services.mozilla.com/D78545